# gem5_visualizer

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
src/: logmodel.cpp  logmodel.h  parser.cpp  parser.h  pipeline.cpp  pipeline.h
test_output/: out
